--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,18 +12,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1",
-    "nodemon": "^3.1.4",
-    "express-session": "^1.18.0",
-    "cookie-parser": "^1.4.6",
     "@aws-sdk/client-s3": "^3.549.0",
     "@aws-sdk/s3-request-presigner": "^3.550.0",
     "aws-sdk": "^2.1593.0",
-    "multer": "^1.4.5-lts.1"
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "firebase": "^11.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.4"
   }
 }
