--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.18.0",
     "firebase": "^11.0.1",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.46",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.4"
