--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "firebase": "^11.0.1",
