--- a/Backend/.env
+++ b/Backend/.env
@@ -3,4 +3,8 @@ DB_USER=root
 DB_PASSWORD=
 DB_DATABASE=simply5
 
+
+AWS_ACCESS_KEY = AKIAQEIP3HSUQT3HTPPM
+AWS_SECRET_ACCESSKEY = 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
+
 CROS_ORIGIN = http://localhost:5176
